@@ -260,9 +260,11 @@ name|RIGHT_ID
 init|=
 literal|5
 decl_stmt|;
-DECL|method|UserDictionary
+DECL|method|open
 specifier|public
+specifier|static
 name|UserDictionary
+name|open
 parameter_list|(
 name|Reader
 name|reader
@@ -283,11 +285,6 @@ name|String
 name|line
 init|=
 literal|null
-decl_stmt|;
-name|int
-name|wordId
-init|=
-name|CUSTOM_DICTIONARY_WORD_ID_OFFSET
 decl_stmt|;
 name|List
 argument_list|<
@@ -363,6 +360,48 @@ name|values
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|featureEntries
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+else|else
+block|{
+return|return
+operator|new
+name|UserDictionary
+argument_list|(
+name|featureEntries
+argument_list|)
+return|;
+block|}
+block|}
+DECL|method|UserDictionary
+specifier|private
+name|UserDictionary
+parameter_list|(
+name|List
+argument_list|<
+name|String
+index|[]
+argument_list|>
+name|featureEntries
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|int
+name|wordId
+init|=
+name|CUSTOM_DICTIONARY_WORD_ID_OFFSET
+decl_stmt|;
 comment|// TODO: should we allow multiple segmentations per input 'phrase'?
 comment|// the old treemap didn't support this either, and i'm not sure if it's needed/useful?
 name|Collections
