@@ -65,6 +65,15 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|StringReader
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
 name|nio
 operator|.
 name|charset
@@ -269,9 +278,9 @@ name|UnicodeUtil
 import|;
 end_import
 begin_class
-DECL|class|TestJapaneseTokenizer
 specifier|public
 class|class
+DECL|class|TestJapaneseTokenizer
 name|TestJapaneseTokenizer
 extends|extends
 name|BaseTokenStreamTestCase
@@ -328,8 +337,9 @@ name|UTF_8
 argument_list|)
 decl_stmt|;
 return|return
-operator|new
 name|UserDictionary
+operator|.
+name|open
 argument_list|(
 name|reader
 argument_list|)
@@ -3534,6 +3544,144 @@ block|,
 literal|1
 block|}
 argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testEmptyUserDict
+specifier|public
+name|void
+name|testEmptyUserDict
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Reader
+name|emptyReader
+init|=
+operator|new
+name|StringReader
+argument_list|(
+literal|"\n# This is an empty user dictionary\n\n"
+argument_list|)
+decl_stmt|;
+name|UserDictionary
+name|emptyDict
+init|=
+name|UserDictionary
+operator|.
+name|open
+argument_list|(
+name|emptyReader
+argument_list|)
+decl_stmt|;
+name|Analyzer
+name|analyzer
+init|=
+operator|new
+name|Analyzer
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|protected
+name|TokenStreamComponents
+name|createComponents
+parameter_list|(
+name|String
+name|fieldName
+parameter_list|)
+block|{
+name|Tokenizer
+name|tokenizer
+init|=
+operator|new
+name|JapaneseTokenizer
+argument_list|(
+name|newAttributeFactory
+argument_list|()
+argument_list|,
+name|emptyDict
+argument_list|,
+literal|false
+argument_list|,
+name|Mode
+operator|.
+name|SEARCH
+argument_list|)
+decl_stmt|;
+return|return
+operator|new
+name|TokenStreamComponents
+argument_list|(
+name|tokenizer
+argument_list|,
+name|tokenizer
+argument_list|)
+return|;
+block|}
+block|}
+decl_stmt|;
+name|assertAnalyzesTo
+argument_list|(
+name|analyzer
+argument_list|,
+literal|"ããã¯æ¬ã§ã¯ãªã"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"ãã"
+block|,
+literal|"ã¯"
+block|,
+literal|"æ¬"
+block|,
+literal|"ã§"
+block|,
+literal|"ã¯"
+block|,
+literal|"ãªã"
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|,
+literal|2
+block|,
+literal|3
+block|,
+literal|4
+block|,
+literal|5
+block|,
+literal|6
+block|}
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|2
+block|,
+literal|3
+block|,
+literal|4
+block|,
+literal|5
+block|,
+literal|6
+block|,
+literal|8
+block|}
+argument_list|)
+expr_stmt|;
+name|analyzer
+operator|.
+name|close
+argument_list|()
 expr_stmt|;
 block|}
 block|}
